tests/regression/errors/basic/undefined_var_11.csd
// Undefined variable test 11
vibez.spill("Using undefined:", undefined_var_11)
sus result drip = missing_variable + 11
